# tuix-core

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
examples/v0.1/: choice_example.py
tuix/core/: __init__.py  core.py
