[metadata]
name = tuix-core
version = 0.1.0
author = custosh
author_email = custosh.x@gmail.com
description = Core engine for the TUIX framework.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/custosh/tuix-core
project_urls =
    Repository = https://github.com/custosh/tuix-core
    Issues = https://github.com/custosh/tuix-core/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Terminals

[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    wcwidth